@@ -41,6 +41,7 @@ PHP                                                                        NEWS
 - Zlib:
   . Fixed bug GH-17745 (zlib extension incorrectly handles object arguments).
     (nielsdos)
+  . Fix memory leak when encoding check fails. (nielsdos)
 
 13 Feb 2025, PHP 8.3.17
 
